--- a/.github/workflows/build-documentation.yml
+++ b/.github/workflows/build-documentation.yml
@@ -102,7 +102,7 @@ jobs:
       - name: Build Usersguide
         run: |
           make usersguide > make_usersguide_stdout.txt 2> make_usersguide_stderr.txt
-          mv build/doc/warnings.log usersguide_warnings.log
+          mv build/docs/warnings.log usersguide_warnings.log
 
       - name: Archive Users Guide Build Logs
         uses: actions/upload-artifact@v2
@@ -138,7 +138,7 @@ jobs:
         run: |
           set -x
           mkdir deploy
-          cd ./build/doc/users_guide/latex
+          cd ./build/docs/users_guide/latex
           make > build.txt
           mv refman.pdf $GITHUB_WORKSPACE/deploy/cFE_Users_Guide.pdf
           # Could add pandoc and convert to github markdown
@@ -186,7 +186,7 @@ jobs:
       - name: Build OSAL Guide
         run: |
           make osalguide > make_osalguide_stdout.txt 2> make_osalguide_stderr.txt
-          mv build/doc/osalguide/osal-apiguide-warnings.log osal-apiguide-warnings.log
+          mv build/docs/osalguide/osal-apiguide-warnings.log osal-apiguide-warnings.log
 
 
       - name: Archive Osal Guide Build Logs
@@ -222,7 +222,7 @@ jobs:
         if: ${{ github.event_name == 'push' && contains(github.ref, 'main')}}
         run: |
           mkdir deploy
-          cd ./build/doc/osalguide/latex
+          cd ./build/docs/osalguide/latex
           make > build.txt
           mv refman.pdf $GITHUB_WORKSPACE/deploy/OSAL_Users_Guide.pdf
           # Could add pandoc and convert to github markdown
