--- a/fuzzbuzz.yaml
+++ b/fuzzbuzz.yaml
@@ -2,8 +2,9 @@ base:
   language: c
   engine: libFuzzer 
   steps:
-    - run: $CC $CFLAGS -c ./cfe/modules/evs/fsw/src/fuzz.c
-    - run: $CC $CFLAGS ./cfe/modules/evs/fsw/src/fuzz.o $LIB_FUZZING_ENGINE -o broken_method_fuzzer
+    - run: ENABLE_FUZZ_TESTS=1 make clean prep all install 
+    # - run: $CC $CFLAGS -c ./cfe/modules/evs/fsw/src/fuzz.c
+    # - run: $CC $CFLAGS ./cfe/modules/evs/fsw/src/fuzz.o $LIB_FUZZING_ENGINE -o broken_method_fuzzer
   sanitizers:
     address: {}
     undefined: {}
