--- a/fuzzbuzz.yaml
+++ b/fuzzbuzz.yaml
@@ -2,6 +2,9 @@ base:
   language: c
   engine: libFuzzer 
   steps:
+    - run: git submodule update --init --recursive # temporary workaround - can remove soon
+    - run: cp cfe/cmake/Makefile.sample Makefile
+    - run: cp -r cfe/cmake/sample_defs sample_defs
     - run: ENABLE_FUZZ_TESTS=1 make clean prep all install 
     # - run: $CC $CFLAGS -c ./cfe/modules/evs/fsw/src/fuzz.c
     # - run: $CC $CFLAGS ./cfe/modules/evs/fsw/src/fuzz.o $LIB_FUZZING_ENGINE -o broken_method_fuzzer
